--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
-    "@devexpress/dx-react-chart": "^4.0.2",
-    "@devexpress/dx-react-chart-material-ui": "^4.0.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@mui/x-data-grid": "^5.17.16",
-    "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -23,12 +21,14 @@
     "papaparse": "^5.3.2",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
